spring-cloud-kubernetes-test-support/src/main/resources/wiremock/wiremock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-wiremock-deployment
spec:
  selector:
    matchLabels:
      app: service-wiremock
  template:
    metadata:
      labels:
        app: service-wiremock
    spec:
      containers:
        - name: service-wiremock
          image: wiremock/wiremock:3.4.2
          args: ["--verbose"]
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /__admin/mappings
            initialDelaySeconds: 3
            periodSeconds: 2
            failureThreshold: 1
          livenessProbe:
            httpGet:
              port: 8080
              path: /__admin/mappings
            initialDelaySeconds: 3
            periodSeconds: 2
            failureThreshold: 1
          ports:
            - containerPort: 8080
