spring-cloud-kubernetes-test-support/src/main/resources/wiremock/wiremock-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-wiremock
  name: service-wiremock
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: service-wiremock
  type: NodePort
