spring-cloud-kubernetes-test-support/src/main/resources/wiremock/wiremock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiremock-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /wiremock/
            pathType: Prefix
            backend:
              service:
                name: service-wiremock
                port:
                  number: 8080
